# almamesh

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
backend/: .env.example  .gitignore  pyproject.toml  pyrightconfig.json
backend/docs/: predictive-engine-plan.md
backend/offline_wheels/: README.md  sgp4-2.25-py3-none-any.whl  skyfield-1.53-py3-none-any.whl
backend/src/almamesh/: __init__.py  calculations.py  config.py  navamsa.py  predictive.py
backend/src/almamesh/constants/: astrology.py
backend/src/almamesh/dasha/: __init__.py  chara.py  convention.py  engine.py  models.py  scoring.py  vimshottari.py  yogini.py
backend/src/almamesh/domains/: __init__.py  emphasis.py  recipes.py  significators.py  strength_summary.py  synthesis.py  varga_summary.py  windows.py
backend/src/almamesh/edge/: __init__.py  bundle.py  chart_runtime.py  cli.py  publish_cli.py
backend/src/almamesh/mesh/: __init__.py  ashtakoota.py  edge.py  mangal.py  overlay.py  significators.py  synchrony.py  tables.py
backend/src/almamesh/rectification/: __init__.py  candidates.py  houses.py  models.py  scorer.py
backend/src/almamesh/resources/: birth_chart_example.json  lahiri_ayanamsa.txt
backend/src/almamesh/rules/: __init__.py  career_rules.yaml  relationship_rules.yaml  rule_types.py
backend/src/almamesh/schemas/: __init__.py  astrology.py  domains.py  mesh.py  predictive_canonical.schema.json  strength.py  transits.py  vargas.py
backend/src/almamesh/strength/: __init__.py  ashtakavarga.py  bindu_tables.py  cheshta.py  context.py  digbala.py  dignity_tables.py  drik.py  friendship.py  kala.py  kala_lords.py  kala_parts.py  naisargika.py  saptavarga.py  shadbala.py  sthana.py  sunrise.py
backend/src/almamesh/transits/: __init__.py  antar.py  aspects.py  fusion.py  gochara.py  ingress.py  natal.py  positions.py  sade_sati.py  saturn_cusp.py  slow_hits.py  timeline.py  timeline_dasha.py  timeline_ingress.py  timeline_sade_sati.py
backend/src/almamesh/vargas/: __init__.py  context.py  divisions.py
backend/src/almamesh/yogas/: __init__.py  combustion.py  engine.py  factors.py  lordship.py  rules.py
backend/tests/: __init__.py  conftest.py  test_ashtakavarga_bindu.py  test_ashtakoota_reference.py  test_ayanamsa_formula.py  test_calculations.py  test_chart_golden.py  test_dasha_convention.py  test_dasha_depth.py  test_dasha_engine.py  test_dasha_reference.py  test_dasha_reference_date.py  test_dasha_transit_fusion.py  test_domains_golden.py  test_edge_bundle.py  test_edge_chart_runtime.py  test_edge_cli.py  test_edge_offline_bundle.py  test_edge_publish_cli.py  test_edge_publisher.py  test_gochara.py  test_house_system.py  test_ingress.py  test_lagna_cusp.py  test_lagna_obliquity.py  test_life_domains.py  test_mesh_ashtakoota.py  test_mesh_entry.py  test_mesh_golden.py  test_mesh_mangal.py  test_mesh_overlay.py  test_mesh_significators.py  test_mesh_synchrony.py  test_navamsa.py  test_node_speed.py  test_positions_apparent.py  test_pratyantardasha.py  test_predictive_entry.py  test_predictive_golden.py  test_rectification_candidates.py  (+30 more)
backend/tests/fixtures/: chart_golden_de421.json  domains_golden_de421.json  mesh_golden_de421.json  predictive_golden_de421.json  private_cases.jsonl.example  rectification_golden.json  rectification_window_golden.json  regen_domains_golden.py  regen_mesh_golden.py  regen_predictive_golden.py  regen_strength_golden.py  strength_golden_de421.json  transit_golden_de421.json  varga_golden_de421.json
backend/tests/validation/: __init__.py  comparators.py  conftest.py  reference_fixtures.json  reference_fixtures_loader.py  test_ground_truth.py  transit_reference_fixtures.json
backend/tools/: generate_reference_fixtures.py  generate_transit_reference_fixtures.py
docs/: README.md  code-guidelines.md  feedback-setup.md  tech-stack.md
docs/deploy/: GO-LIVE-almamesh-com.md  almamesh-com.md
docs/design/: 2026-06-23-landing-splash-design.md  2026-06-23-landing-splash-plan.md
docs/releases/: v0.3.0.md
docs/specs/: 054-karma-action-classification.md  057-karma-gamification-ui.md  058-dasha-modifier-config.md  SPEC-COMPLETION-TRACKING.md  (+6 more)
examples/: run_chart.sh
frontend/: README.md  nixpacks.toml  package.json  tsconfig.base.json
scripts/: go-live-almamesh.sh
(+496 files in other folders)
